# bookkeeper

./: .gitignore  README.md  pyproject.toml  run_checks.py
bookkeeper/: bookkeeper.py  main.py  simple_client.py  utils.py
bookkeeper/config/: config.ini  configurator.py  (+1 more)
test_coverage.html/: d_27b48a74f130e43b___init___py.html  d_27b48a74f130e43b_budget_py.html  d_27b48a74f130e43b_category_py.html  d_27b48a74f130e43b_expense_py.html  d_5cb1676e94ab1b84___init___py.html  d_5cb1676e94ab1b84_abstract_repository_py.html  d_5cb1676e94ab1b84_memory_repository_py.html  d_5cb1676e94ab1b84_repository_factory_py.html  d_5cb1676e94ab1b84_sqlite_repository_py.html  d_691f5d157f3dacc5_gettext_py.html  d_751781052c1b3078_test_configurator_py.html  d_9a804dabd87f828b_test_budget_py.html  d_9a804dabd87f828b_test_category_py.html  d_9a804dabd87f828b_test_expense_py.html  d_9b4c0c9281a83259_configurator_py.html  d_9b4c0c9281a83259_constants_py.html  d_a44f0ac069e85531_test_main_py.html  d_a44f0ac069e85531_test_utils_py.html  d_aa77ddab10f0c57d_test_abstract_view_py.html  d_aa77ddab10f0c57d_test_qt6_view_py.html  d_c1b4ae105e864f58___init___py.html  d_c1b4ae105e864f58_abstract_view_py.html  d_c1b4ae105e864f58_qt6_view_py.html  d_d6c6c12975fd4b21_test_abstract_repository_py.html  d_d6c6c12975fd4b21_test_memory_repository_py.html  d_d6c6c12975fd4b21_test_repository_factory_py.html  d_d6c6c12975fd4b21_test_sqlite_repository_py.html  d_db3490f866144f24___init___py.html  d_db3490f866144f24_main_py.html  d_db3490f866144f24_utils_py.html  index.html  status.json
tests/: test_main.py
(+23 files in other folders)
