[tool.poetry]
name = "pybookkeeper"
version = "0.1.0"
description = "Python app to manage your personal finances"
authors = ["Anatoly Chistov <atchistov@gmail.com>", "LXDMIPT Group"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookkeeper"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"
pyside6-stubs = "^6.4.2.0"
pytest-qt = "^4.4.0"
mock = "^5.1.0"
freezegun = "^1.4.0"
lsprotocol = "^2023.0.1"
pygls = "^1.3.1"
babel = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
